# OpenENV-ScalerSchool

./: .env.example  .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  knowledge_base.py  models.py  openenv.yaml  play.py  pyproject.toml  requirements.txt  reward.py  run_agent.py  schema.py  tasks.py
server/: app.py
