[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support-resolution"
version = "1.0.0"
description = "Real-world AI Customer Support Resolution OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "python-dotenv",
    "gradio",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
